[gd_scene load_steps=6 format=3 uid="uid://uh8eyfswa2wk"]

[ext_resource type="Texture2D" uid="uid://7no02yoc1l2r" path="res://Asset/character_1/Idle.png" id="1_o8ro5"]
[ext_resource type="Script" path="res://Script/player_bar.gd" id="1_sfjro"]
[ext_resource type="Theme" uid="uid://c5mk51k51gcl3" path="res://Themes/button_theme.tres" id="2_7key0"]
[ext_resource type="Texture2D" uid="uid://bmmdvyjrsjsx3" path="res://Asset/character_3/Idle.png" id="3_j5dxy"]
[ext_resource type="Texture2D" uid="uid://cuv60k4hyf8n6" path="res://Asset/character_2/Idle.png" id="4_c0urb"]

[node name="Player_Properties" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="." node_paths=PackedStringArray("player1_sprite", "player2_sprite")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -499.0
offset_top = 48.0
offset_right = 499.0
offset_bottom = 88.0
grow_horizontal = 2
theme_override_constants/separation = 800
script = ExtResource("1_sfjro")
player1_sprite = NodePath("Player1/player1_Sprite2D")
player2_sprite = NodePath("Player2/player2_Sprite2D")
warrior = ExtResource("1_o8ro5")
speedster = ExtResource("3_j5dxy")
tank = ExtResource("4_c0urb")

[node name="Player1" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Player1"]
layout_mode = 2

[node name="player1_name" type="Label" parent="HBoxContainer/Player1/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_7key0")
text = "  player1  "

[node name="player1_bar" type="ProgressBar" parent="HBoxContainer/Player1/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_7key0")
max_value = 10.0

[node name="player1_Sprite2D" type="Sprite2D" parent="HBoxContainer/Player1"]
scale = Vector2(3, 3)
texture = ExtResource("1_o8ro5")
hframes = 4

[node name="Player2" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Player2"]
layout_mode = 2

[node name="player2_name" type="Label" parent="HBoxContainer/Player2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_7key0")
text = "  player2  "

[node name="player2_bar" type="ProgressBar" parent="HBoxContainer/Player2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_7key0")
max_value = 10.0

[node name="player2_Sprite2D" type="Sprite2D" parent="HBoxContainer/Player2"]
scale = Vector2(3, 3)
texture = ExtResource("1_o8ro5")
hframes = 4
